--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@emotion/core": "10.0.35",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "10.0.27",
+    "@types/node": "16.11.27",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
+    "emotion": "10.0.27",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
