--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emotion": "10.0.27",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "typescript": "4.6.3"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.5"
   }
 }
