--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-helmet": "^6.1.0",
+    "react-id-swiper": "^4.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "swiper": "^8.1.4",
     "typescript": "4.6.3"
   },
   "scripts": {
