--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "10.0.35",
-    "@emotion/react": "^11.9.0",
+    "@emotion/react": "11.9.0",
     "@emotion/styled": "10.0.27",
     "@types/node": "16.11.27",
     "@types/react": "18.0.5",
@@ -12,11 +12,8 @@
     "emotion": "10.0.27",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-helmet": "^6.1.0",
-    "react-id-swiper": "^4.0.0",
-    "react-responsive-carousel": "^3.2.23",
+    "react-helmet": "6.1.0",
     "react-scripts": "5.0.1",
-    "swiper": "^8.1.4",
     "typescript": "4.6.3"
   },
   "scripts": {
@@ -44,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.9.2",
-    "@types/react-helmet": "^6.1.5"
+    "@emotion/babel-plugin": "11.9.2",
+    "@types/react-helmet": "6.1.5"
   }
 }
